--- a/DatosAPI.html
+++ b/DatosAPI.html
@@ -1,4 +1,4 @@
-/* Caracteristica nueva de HTML5 permite administrar el estado de una sesipm */
+/* Caracteristica nueva de HTML5 permite administrar el estado de una sesion */
 /* El API de historial */
-/* Las aplicaciones web pueden administrar el esado */
-/* Permite bavegar por el historial de la sesion y conservar los datos del estado */
+/* Las aplicaciones web pueden administrar el estado */
+/* Permite navegar por el historial de la sesion y conservar los datos del estado */
